kubernetes/manifests/cloudflare/deployment.yaml
# Source: cloudflared/charts/common/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: cloudflare
  labels:
    app: cloudflared
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: cloudflared-container
          image: cloudflare/cloudflared:latest
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - --loglevel
            - debug
            - run
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 2000
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: cloudflare-config
              mountPath: /etc/cloudflared/config
              readOnly: true
            - name: cloudflare-tunnel-token
              mountPath: /etc/cloudflared/creds
              readOnly: true
      imagePullSecrets:
        - name: dockerhub-token
      volumes:
        - name: cloudflare-config
          configMap:
            name: cloudflare-config
        - name: cloudflare-tunnel-token
          secret:
            secretName: cloudflare-tunnel-token
