kubernetes/manifests/cloudflare/ciliumnetpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
      name: default
      namespace: cloudflare
spec:
      endpointSelector: {}
      egress:
            - toEndpoints:
                    - matchLabels:
                            io.kubernetes.pod.namespace: kube-system
                            k8s-app: kube-dns
              toPorts:
                    - ports:
                            - port: "53"
                              protocol: UDP
                      rules:
                            dns:
                                  - matchPattern: "*"
            - toEndpoints:
                    - matchLabels:
                            io.kubernetes.pod.namespace: recipes
                    - matchLabels:
                            io.kubernetes.pod.namespace: grav
                    - matchLabels:
                            io.kubernetes.pod.namespace: glance
                    - matchLabels:
                            io.kubernetes.pod.namespace: audiobook
                    - matchLabels:
                            io.kubernetes.pod.namespace: immich
                    - matchLabels:
                            io.kubernetes.pod.namespace: authentik
                    - matchLabels:
                            io.kubernetes.pod.namespace: plex
                    - matchLabels:
                            io.kubernetes.pod.namespace: joplin
                    - matchLabels:
                            io.kubernetes.pod.namespace: infisical
                    - matchLabels:
                            io.kubernetes.pod.namespace: tibiary
            # Allow Cloudflare
            - toFQDNs:
                    - matchPattern: "*.cloudflare.com"
                    - matchPattern: "*.*.cloudflare.com"
                    - matchPattern: "*.*.argotunnel.com"
            - toCIDRSet:
                    - cidr: 198.41.128.0/17 # Cloudflare tunnel CIDR
              toPorts:
                    - ports:
                            - port: "7844"
                              protocol: UDP
            - toCIDRSet:
                    - cidr: 1.1.1.1/32
              toPorts:
                    - ports:
                            - port: "853"
                              protocol: TCP
